--- a/proyecto2Datos/nbproject/project.properties
+++ b/proyecto2Datos/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.listsLibJ.jar}
+    ${reference.listsLibJ.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
