empesando a serializar xml

--- a/proyecto2Datos/nbproject/project.properties
+++ b/proyecto2Datos/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyecto2Datos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gson-2.8.5.jar=..\\librerias\\gson-2.8.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.listsLibJ.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
