ya puede ir por rutas alternas

--- a/proyecto2Datos/nbproject/project.properties
+++ b/proyecto2Datos/nbproject/project.properties
@@ -27,12 +27,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyecto2Datos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.gson-2.8.5.jar=..\\librerias\\gson-2.8.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
